src/styles/components/tape-loop.css
tape-loop {
  max-width: 100vw;
  display: flex;
  overflow-x: hidden;
  padding-block: 8px;
}

tape-loop {
  font-size: 1.625rem;
  font-weight: 700;
  line-height: 1.23;
  text-transform: uppercase;
}

tape-element {
  animation: marquee 8s linear infinite;
  display: flex;
  align-items: center;
  white-space: nowrap;
}

tape-element svg {
  margin-inline: 8px;
}

@keyframes marquee {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

